# rust-ai

./: .gitignore  CLAUDE.md  Cargo.toml  DEMO.md  README.md  roadmap.md
.claude/agents/: rust-dev.md  rust-qa.md  rust-senior.md
.github/workflows/: ci.yml
classify/: Cargo.toml  README.md
classify/src/: main.rs  postprocess.rs  preprocess.rs
counter/: Cargo.toml  README.md
counter/assets/: DejaVuSans-LICENSE.txt
counter/src/: dashboard.rs  draw.rs  ffmpeg.rs  line_counter.rs  main.rs  postprocess.rs  preprocess.rs  source.rs  tracker.rs
detect/: Cargo.toml  README.md
detect/src/: coco_labels.rs  draw.rs  main.rs  postprocess.rs  preprocess.rs
detect/tests/: cli.rs  logic.rs
scripts/: deploy-to-target.sh  setup-demo.sh
server/: Cargo.toml  README.md
server/src/: handlers.rs  main.rs  model.rs  postprocess.rs  preprocess.rs
server/tests/: http_integration.rs
vision-core/: Cargo.toml
vision-core/src/: lib.rs  session.rs
