[package]
name = "classify"
version = "0.1.0"
edition.workspace = true
description = "MobileNetV2 image classifier CLI using ONNX Runtime"

[dependencies]
# Shared session builder and other workspace utilities
vision-core = { path = "../vision-core" }

# Argument parsing
clap = { version = "4", features = ["derive"] }

# ONNX Runtime bindings — download the ORT dylib automatically
ort.workspace = true

# Image loading and resizing
image = "0.25"

# Numerical array layout (NCHW tensors)
ndarray = "0.17"

# Error handling
anyhow.workspace = true

[dev-dependencies]
approx = "0.5"
