[package]
name = "counter"
version = "0.1.0"
edition.workspace = true
description = "People counter with YOLOv8 person detection, multi-object tracking, line-crossing counting, and a live MJPEG dashboard"

[features]
# Camera capture via V4L2 — disabled by default so the crate builds and all
# tests pass on any x86 dev box with no camera attached.
camera = ["dep:nokhwa"]

[dependencies]
# Shared session builder and other workspace utilities
vision-core = { path = "../vision-core" }

# Argument parsing
clap = { version = "4", features = ["derive"] }

# ONNX Runtime — CUDA EP registered; falls back to CPU automatically on non-GPU hosts
ort.workspace = true

# Image loading, resizing, and JPEG encoding (built-in JPEG codec)
image = { version = "0.25", features = ["jpeg"] }

# Drawing bounding boxes, lines, and text onto frames
imageproc = "0.27"

# Font rasterisation used by imageproc's draw_text_mut.
# We embed a TTF font via include_bytes! so no runtime font path is needed.
ab_glyph = "0.2"

# NCHW tensor layout
ndarray = "0.17"

# Error handling
anyhow.workspace = true

# Async web framework for the live-count dashboard
axum = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON (de)serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Streaming body for the MJPEG /stream endpoint
futures-util = "0.3"
bytes = "1"

# Camera capture — only compiled when the `camera` feature is enabled
nokhwa = { version = "0.10", features = ["input-v4l", "output-threaded"], optional = true }

[dev-dependencies]
approx = "0.5"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
