[package]
name = "detect"
version = "0.1.0"
edition.workspace = true
description = "YOLOv8 real-time object detector with bounding-box overlay"

[dependencies]
# Shared session builder and other workspace utilities
vision-core = { path = "../vision-core" }

# Argument parsing
clap = { version = "4", features = ["derive"] }

# ONNX Runtime — CUDA + CPU fallback (downloads ORT dylib automatically)
ort.workspace = true

# Image loading, resizing, and saving
image = "0.25"

# Drawing bounding boxes and labels on images
imageproc = "0.27"

# Numerical array layout (NCHW tensors)
ndarray = "0.17"

# Error handling
anyhow.workspace = true

# Camera capture — V4L2 on Linux/Jetson, native on other platforms
nokhwa = { version = "0.10", features = ["input-v4l", "output-threaded"] }

[dev-dependencies]
approx = "0.5"

# CLI black-box testing
assert_cmd = "2.2.2"
predicates = "3.1.4"

# Parameterized tests
rstest = "0.26.1"
